<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
   >
    <string name="app_name">Sun Shine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">MAP</string>
    <string name="action_share">Share</string>
    <string name="hello_world">hello</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="prefs_location_title" translatable="true">Location</string>
    <string name="prefs_location_hint" translatable="true">please input your location</string>
    <string name="prefs_location_key" translatable="false">location</string>
    <string name="prefs_location_default_value" translatable="false">94043</string>

    <string name="pref_temp_setting_key">temp_setting</string>
    <string name="pref_temp_setting_title">temperature measurement unit</string>
    <string name="pref_temp_setting_summery">choose measurement unit </string>
    <string name="pref_temp_setting_default">c</string>
    <string name="pref_temp_setting_celsius">c</string>
    <string name="pref_temp_setting_fahrenheit">f</string>
    <string-array name="pref_temp_settings_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_temp_settings_values">
        <item>c</item>
        <item>f</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>



    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.luxtech_eg.com</string>
    <string name="content_authority">com.luxtech_eg.sunshine</string>

 <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
 <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <string name="show_notification_pref_key">show_notifications</string>
    <string name="show_notification_pref_title">Show Notifications</string>
</resources>
