<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/prefs_location_title"
        android:key="@string/prefs_location_key"
        android:defaultValue="@string/prefs_location_default_value"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/prefs_location_hint"/>
    <ListPreference
        android:key="@string/pref_temp_setting_key"
        android:title="@string/pref_temp_setting_title"
        android:summary="@string/pref_temp_setting_summery"
        android:defaultValue="@string/pref_temp_setting_default"
        android:entries="@array/pref_temp_settings_entries"
        android:entryValues="@array/pref_temp_settings_values" />

</PreferenceScreen>